--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,12 @@ jobs:
           pip3 install --upgrade pip
           pip3 install -r requirements.txt
 
+      - name: Create test environment
+        working-directory: src/
+        run: |
+          echo "SECRET_KEY=django-insecure-ci-test-key-not-for-production" > .env
+          echo "DEBUG=True" >> .env
+
       - name: Check Django setup
         working-directory: src/
         run: python3 manage.py check
